Fix dialog overflow

--- a/src/comps/layout/styles/_dialog.scss
+++ b/src/comps/layout/styles/_dialog.scss
@@ -93,10 +93,13 @@
         }
 
         .dolfo-dialog-content{
-            padding: 0 1.3rem;
-            overflow: auto;
-            max-height: 70vh
+            padding: 0 1.3rem
         }
+    }
+
+    &.overflows .dolfo-dialog-inner .dolfo-dialog-content{
+        overflow: auto;
+        max-height: 70vh
     }
 
     &.place-top .dolfo-dialog-inner{
